Add ways functions

--- a/Chess.dproj
+++ b/Chess.dproj
@@ -131,6 +131,7 @@
             <Form>StartForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Global.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
